# scrolls

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  daemon.old  dump.rdb  flake.nix  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/: Dockerfile
.github/chglog/: release.yml
.github/workflows/: release.yml  testdrive.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/advanced/: index.md  intersect_options.md  rollback_buffer.md  stateful_cursor.md  swarm_mode.md
book/src/configuration/: README.md  chain.md  enrich.md  intersect.md  policy.md  reducers.md  sources.md  storage.md
book/src/configuration/reducers/: README.md  predicates.md
book/src/enrich/: index.md  redis.md  sled.md
book/src/guides/: README.md  nodejs.md  python.md  redis.md  testdrive.md
book/src/installation/: README.md  binary_release.md  docker.md  from_source.md  index.md
book/src/reducers/: README.md  address_by_asset.md  address_by_txo.md  addresses_by_asset.md  addresses_by_stake.md  assets_by_address.md  assets_by_stake_key.md  balance_by_address.md  balance_by_stake_key.md  block_header_by_hash.md  deno.md  golang.md  index.md  last_block_parameters.md  point_by_tx.md  pool_by_stake.md  python.md  rust.md  stake_keys_by_asset.md  supply_by_asset.md  tx_by_hash.md  tx_count_by_address.md  tx_count_by_asset.md  tx_count_by_policy_id.md  tx_count_by_stake_key.md  typescript.md  utxo_by_address.md  utxo_by_stake.md  utxos_by_asset.md
book/src/sources/: README.md  index.md  n2c.md  n2n.md
book/src/storage/: README.md  index.md  redis.md
book/src/troubleshooting/: README.md
book/src/usage/: README.md  example.md  index.md
examples/builtin/: blockCborDaemon.toml  daemon.toml
examples/deno/: README.md  daemon.toml  enrich.js  reduce.js
examples/deno-postgres/: README.md  daemon.toml  docker-compose.yml  reduce.js  schema.sql
examples/deno/reducers/: build.ts
examples/deno/reducers/src/: balance_by_address.ts  mod.ts
examples/quill/: README.md  daemon.toml  docker-compose.yaml  reduce.js
examples/redis/: daemon.toml
reducers/: deno.html  golang.html  index.html  python.html  rust.html  typescript.html
sdk/cli/: Cargo.toml
sdk/cli/src/: main.rs  scaffold.rs
sdk/templates/reducer-oura-golang/: Makefile  go.mod.hbs  main.go  oura.toml.hbs
sdk/templates/reducer-oura-typescript/: Makefile  init.sql.hbs  oura.toml  oura.toml.hbs  reducer.ts
src/: bootstrap.rs  lib.rs  model.rs  prelude.rs
src/collections/: mod.rs  point_by_tx.rs  utxo_by_address.rs
src/crosscut/: addresses.rs  args.rs  blocks.rs  epoch_calculator.rs  epochs.rs  filters.rs  historic.rs  mod.rs  policies.rs  time.rs
src/enrich/: mod.rs  redis.rs  skip.rs  sled.rs
src/framework/: errors.rs  mod.rs  model.rs
src/reducers/: address_by_ada_handle.rs  address_by_asset.rs  address_by_stake.rs  address_by_txo.rs  addresses_by_asset.rs  addresses_by_stake.rs  asset_holders_by_asset.rs  asset_holders_by_asset_id.rs  asset_metadata.rs  assets_by_address.rs  assets_by_stake_key.rs  balance_by_address.rs  balance_by_address.temp  balance_by_contract_address.rs  balance_by_script.rs  balance_by_stake_key.rs  block_header_by_hash.rs  current_epoch.rs  datum_by_hash.rs  fees_by_script.rs  full_utxos_by_address.rs  last_block_parameters.rs  liquidity_by_token_pair.rs  macros.rs  mod.rs  multi_asset_balances.rs  plutus_script_by_hash.rs  point_by_tx.rs  pool_by_stake.rs  stake_keys_by_asset.rs  supply_by_asset.rs  total_balance.rs  total_transactions_count.rs  total_transactions_count_by_addresses.rs  total_transactions_count_by_contract_addresses.rs  total_tx_count.rs  transaction_size_by_script.rs  transactions_count_by_address.rs  transactions_count_by_address_by_epoch.rs  transactions_count_by_address_hash.rs  (+19 more)
src/reducers/_reducers/: address_by_txo.rs  block_header_by_hash.rs  pool_by_stake.rs
src/reducers/builtin/: block_cbor_by_hash.rs  mod.rs
src/reducers/deno/: mod.rs  runtime.js
src/reducers/liquidity_by_token_pair/: README.md  minswap.rs  mod.rs  model.rs  sundaeswap.rs  utils.rs  wingriders.rs
src/sources/: mod.rs  n2c.rs  n2n.rs  transport.rs  utils.rs
src/sources/n2c/: chainsync.rs  mod.rs  transport.rs
src/sources/n2n/: blockfetch.rs  chainsync.rs  messages.rs  mod.rs  transport.rs
src/storage/: elastic.rs  mod.rs  mongodb.rs  postgres.rs  redis.rs  skip.rs
testdrive/: daemon.toml  docker-compose.yml
testdrive/adahandle/: README.md  daemon.toml
testdrive/custom/: adahandle.toml  daemon.toml  docker-compose.yml  start.sh
testdrive/custom/data/: .gitignore  dump.rdb
testdrive/docker-compose/: daemon.toml
testdrive/elastic/: daemon.json
testdrive/filters/: daemon.json
testdrive/full_utxos_by_address/: daemon.toml  docker-compose.yml
testdrive/kubernetes/: README.md  scrolls.yaml
testdrive/liquidity_by_token_pair/mainnet/: daemon.toml
testdrive/liquidity_by_token_pair/preprod/: daemon.toml  docker-compose.yml
testdrive/simple/: daemon minswap.toml  daemon sundaeswap.toml  daemon.toml  daemon2.toml  docker-compose.yml  dump.rdb
testdrive/swarm/: README.md  common.toml  daemon-a.toml  daemon-b.toml  daemon-c.toml  daemon-d.toml  daemon-e.toml  daemon-f.toml  docker-compose.yml
testing/: .gitignore  Cargo.toml  README.md  daemon.toml  docker-compose.yml  run.sh  tests.rs
testing/sql/: addresses_by_asset.sql  assets_by_address.sql  assets_by_stake_key.sql  balance_by_address.sql  balance_by_stake_key.sql  stake_keys_by_asset.sql  supply_by_asset.sql  tx_count_by_asset.sql  txcount_by_address.sql  txcount_by_stake_key.sql
(+3 files in other folders)
