[package]
name = "scrolls"
description = "Cardano Scrolls"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/scrolls"
homepage = "https://github.com/txpipe/scrolls"
documentation = "https://docs.rs/scrolls"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]


[dependencies]
# pallas = "0.11.0-alpha.1"
pallas = { path = "../pallas/pallas" }
hex = "0.4.3"
net2 = "0.2.37"
bech32 = "0.8.1"
clap = "3.1.3"
log = "0.4.14"
env_logger = "0.9.0"
crossterm = "0.23"
merge = "0.1.0"
config = { version = "0.13.0", default-features = false, features = ["toml"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
minicbor = "0.14.1"
prometheus_exporter = { version = "0.8.4", default-features = false }
# gasket = { path = "../../gasketlibs/gasket-rs" }
gasket = { git = "https://github.com/construkts/gasket-rs.git" }
thiserror = "1.0.30"
redis = "0.21.5"
sled = "0.34.7"

[features]
unstable = []
default = []
