[package]
name = "scrolls"
description = "Cardano Scrolls"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/txpipe/scrolls"
homepage = "https://github.com/txpipe/scrolls"
documentation = "https://docs.rs/scrolls"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]


[dependencies]
pallas = "0.17.0"
# pallas = { path = "../pallas/pallas" }
# pallas = { git = "https://github.com/txpipe/pallas.git" }
hex = "0.4.3"
net2 = "0.2.37"
bech32 = "0.8.1"
blake2 = "0.9.1"
clap = { version = "3.2.6", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
merge = "0.1.0"
config = { version = "0.13.0", default-features = false, features = [
    "toml",
    "json",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
minicbor = "0.14.1"
prometheus_exporter = { version = "0.8.4", default-features = false }
# gasket = { path = "../../construkts/gasket-rs" }
gasket = { git = "https://github.com/construkts/gasket-rs.git" }
thiserror = "1.0.30"
redis = "0.21.5"
sled = "0.34.7"
lazy_static = "1.4.0"
rayon = "1.5.3"

# async feature
futures = { version = "0.3.24", optional = true }
tokio = { version = "1.21.1", features = ["rt-multi-thread"], optional = true }

# elastic feature
elasticsearch = { version = "8.5.0-alpha.1", optional = true }

# tui feature
indicatif = { version = "0.17.0-rc.11", optional = true }

# required for CI to complete successfully
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
async = ["futures", "tokio"]
elastic = ["elasticsearch", "async", "openssl"]
unstable = ["elastic"]
tui = ["indicatif"]
default = ["tui"]
