[package]
name = "scrolls"
description = "Cardano Scrolls"
version = "0.6.0-alpha.0"
edition = "2021"
repository = "https://github.com/txpipe/scrolls"
homepage = "https://github.com/txpipe/scrolls"
documentation = "https://docs.rs/scrolls"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]


[dependencies]
pallas = "0.19.1"
# pallas = { path = "../pallas/pallas" }
# pallas = { git = "https://github.com/txpipe/pallas.git" }

gasket = { version = "0.5.0", features = ["derive"] }
# gasket = { path = "../../construkts/gasket-rs", features = ["derive"] }
# gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"]  }

hex = "0.4.3"
net2 = "0.2.37"
bech32 = "0.8.1"
clap = { version = "3.2.6", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
merge = "0.1.0"
config = { version = "0.13.0", default-features = false, features = ["toml", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
prometheus_exporter = { version = "0.8.4", default-features = false }
thiserror = "1.0.30"
sled = "0.34.7"
lazy_static = "1.4.0"
rayon = "1.5.3"

# async feature
futures = { version = "0.3.24", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"] }

# elastic feature
elasticsearch = { version = "8.5.0-alpha.1", optional = true }

# tui feature
indicatif = { version = "0.17.0-rc.11", optional = true }

# required for CI to complete successfully
openssl = { version = "0.10", optional = true, features = ["vendored"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-trait = "0.1.73"
r2d2_redis = "0.14.0"
deno_runtime = { version = "0.136.0", optional = true }
chrono = { version = "0.4.31", optional = true }
utxorpc = { version = "1.0.0-alpha.1", optional = true }
bb8-postgres = "0.8.1"

[features]
async = ["futures"]
elastic = ["elasticsearch", "async", "openssl"]
unstable = ["elastic"]
tui = ["indicatif"]
default = ["tui"]
deno = ["deno_runtime", "chrono", "utxorpc"]
