[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.5"
postgres = "0.19.5"
serde = { version = "1.0.159", features = ["derive"]  }
serde_json = "1.0.95"

[[bin]]
name = "tests"
path = "tests.rs"
