[package]
name = "scrolls-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
handlebars = "5.1.1"
inquire = "0.6.2"
miette = { version = "5.10.0", features = ["fancy"] }
serde_json = "1.0.111"
walkdir = "2.4.0"
